# azure-iot-sdk-for-rust

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
sdk/common/: Cargo.toml
sdk/common/src/: common.rs  error.rs  lib.rs
sdk/iot/: Cargo.toml  build.rs
sdk/iot/examples/provisioning-sas/: lib.rs  main.rs
sdk/iot/src/: lib.rs  statuscode.rs
sdk/iot/src/provisioning/: base64.rs  client.rs  common.rs  error.rs  mod.rs  percent_encode.rs  sas.rs  serialization.rs  util.rs
