[package]
name = "azure-sdk-for-rust-iot"
version = "0.1.0"
authors = ["Ian Davis <ian.f.davis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-sdk-for-rust-common = { path = "../common" }
heapless = "0.5.5"
hmac = "0.8.1"
sha2 = "0.9.1"
generic-array = "0.13.2"
failure = "0.1.8"
serde-json-core = "0.1.0"

[dependencies.uuid]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[dependencies.base64]
version = "0.12.3"
default-features = false
features = []

[dev-dependencies]
paho-mqtt = "0.7.1"

[dependencies.futures]
version = "0.3.5"
default-features = false